unitTest,RestTemplate,OnetoOne,OneToMapping,ManyToMany,AddressCrud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+apiBaseUrl=http://api.positionstack.com
+apiKey=a9d8787055b9f16bfad814b6e4330f51
+
 # Enabling H2 Console
 spring.h2.console.enabled=true
 
